<resources>
    <string name="app_name">Speed Analyzer</string>
    <string name="action_settings">Settings</string>
    <string name="add_trip_btn">Add Trip</string>
    <string name="current_speed">0 km/h</string>
    <string name="msg_start_trip">Please start the trip.</string>
    <string name="msg_sel_none">Please select a trip.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_trip_dialog_title">Enter trip name.</string>
    <string name="edit_trip_dialog_ok">Save</string>
    <string name="edit_trip_dialog_cancel">Cancel</string>
    <string name="start_trip">Start</string>
    <string name="stop_trip">Stop</string>
    <string name="trip_report">Report</string>
    <string name="title_activity_map">Trip Track</string>
    <string name="title_activity_trip_analyzer">Trip Report</string>

    <!-- Notification -->
    <string name="notify_title">Speed Analyzer</string>
    <string name="notify_desc">Current Speed : </string>

    <!-- Analyzer Report-->
    <string name="maxSpeed"> Maximum Speed : </string>
    <string name="minSpeed"> Minimum Speed : </string>
    <string name="avgSpeed"> Average Speed : </string>
    <string name="idleTime"> Idle Time : </string>
    <string name="graph_y_label">Speed (km/h)</string>
    <string name="graph_x_label">Time</string>

    <string name="delete_dlg_message">Delete the selected trip(s)?</string>
    <string name="delete_dlg_yes">Yes</string>
    <string name="delete_dlg_no">No</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <!--<string name="server_client_id">400736214254-1p8hr8uvdporrca6gpk66dqk2lii4mfi.apps.googleusercontent.com</string>-->
</resources>
